# receipts

./: .cursorrules  .env.example  .gitignore  README.md  db.py  main.py  mypy.ini  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/api/: __init__.py  receipts.py  users.py
app/services/: __init__.py  document_ai.py
lib_docs/: python_supabase_docs.md
supabase/: config.toml  schema.sql
supabase/migrations/: 20241218190518_inital_set_up.sql
